[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Interface/EditActor.gd" type="Script" id=1]

[node name="EditActor" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -130.0
margin_right = 157.0
margin_bottom = 132.0
popup_exclusive = true
window_title = "Edit actor"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 303.0
margin_bottom = 252.0
custom_constants/separation = 10

[node name="ActorSelector" type="OptionButton" parent="Margin/VBoxContainer"]
margin_left = 213.0
margin_right = 293.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 8
text = "Actor"
align = 2

[node name="InfoPanel" type="Panel" parent="Margin/VBoxContainer"]
margin_top = 30.0
margin_right = 293.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Margin" type="MarginContainer" parent="Margin/VBoxContainer/InfoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="Margin/VBoxContainer/InfoPanel/Margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 288.0
margin_bottom = 177.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameContainer" type="HBoxContainer" parent="Margin/VBoxContainer/InfoPanel/Margin/Options"]
margin_right = 283.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Margin/VBoxContainer/InfoPanel/Margin/Options/NameContainer"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
rect_min_size = Vector2( 60, 0 )
text = "Name:"

[node name="Name" type="LineEdit" parent="Margin/VBoxContainer/InfoPanel/Margin/Options/NameContainer"]
margin_left = 64.0
margin_right = 283.0
margin_bottom = 24.0
hint_tooltip = "Actor name
(Max 7 characters)"
size_flags_horizontal = 3
max_length = 7
placeholder_text = "Actor"

[node name="ColorContainer" type="HBoxContainer" parent="Margin/VBoxContainer/InfoPanel/Margin/Options"]
margin_top = 29.0
margin_right = 283.0
margin_bottom = 49.0

[node name="Label2" type="Label" parent="Margin/VBoxContainer/InfoPanel/Margin/Options/ColorContainer"]
margin_top = 3.0
margin_right = 60.0
margin_bottom = 17.0
rect_min_size = Vector2( 60, 0 )
text = "Color:"

[node name="Color" type="ColorPickerButton" parent="Margin/VBoxContainer/InfoPanel/Margin/Options/ColorContainer"]
margin_left = 64.0
margin_right = 283.0
margin_bottom = 20.0
hint_tooltip = "Color for the actor
(Not yet implemented)"
size_flags_horizontal = 3
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="Warning" type="Label" parent="Margin/VBoxContainer/InfoPanel/Margin/Options"]
visible = false
margin_top = 76.0
margin_right = 283.0
margin_bottom = 90.0
size_flags_vertical = 10
custom_colors/font_color = Color( 0.952941, 0.188235, 0.188235, 1 )
text = "Actor already exists"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Margin/VBoxContainer/InfoPanel/Margin/Options"]
margin_top = 80.0
margin_right = 283.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( -438.005, -102.791 )
size_flags_vertical = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instances" type="HBoxContainer" parent="Margin/VBoxContainer/InfoPanel/Margin/Options"]
margin_top = 152.0
margin_right = 283.0
margin_bottom = 172.0
size_flags_vertical = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumActor" type="Label" parent="Margin/VBoxContainer/InfoPanel/Margin/Options/Instances"]
margin_top = 3.0
margin_right = 149.0
margin_bottom = 17.0
size_flags_horizontal = 0
size_flags_vertical = 6
text = "Number of instances: 0"

[node name="Delete" type="Button" parent="Margin/VBoxContainer/InfoPanel/Margin/Options/Instances"]
margin_left = 228.0
margin_right = 283.0
margin_bottom = 20.0
size_flags_horizontal = 10
text = "Delete"

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/VBoxContainer"]
margin_top = 222.0
margin_right = 293.0
margin_bottom = 242.0

[node name="Accept" type="Button" parent="Margin/VBoxContainer/HBoxContainer"]
margin_right = 144.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Accept"

[node name="Accept3" type="Button" parent="Margin/VBoxContainer/HBoxContainer"]
margin_left = 148.0
margin_right = 293.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Cancel"

[connection signal="about_to_show" from="." to="." method="_on_EditActor_about_to_show"]
[connection signal="item_selected" from="Margin/VBoxContainer/ActorSelector" to="." method="_on_ActorSelector_item_selected"]
[connection signal="pressed" from="Margin/VBoxContainer/HBoxContainer/Accept" to="." method="_on_Accept_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/HBoxContainer/Accept3" to="." method="_on_Accept3_pressed"]
